--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -1,26 +1,34 @@
-=={{ isSubmitting$ | async}}==
-<div class="auth-page">
-    <div class="container page">
-        <div class="row">
-            <div class="col-md-6 offset-md-3 col-xs-12">
-                <h1 class="text-xs-center">Sign Up</h1>
-                <p class="text-cs-center">
-                    <a routerLink="/login">Have an account?</a>
-                </p>
-                BACKEND ERRORS HERE
-                <form [formGroup]="form" (ngSubmit)="onSubmit()" class="form-group">
-                    <fieldset class="form-group">
-                        <input formControlName="username" type="text" class="form-control form-control-lg" placeholder="Username">
-                    </fieldset>
-                    <fieldset class="form-group">
-                        <input formControlName="email" type="text" class="form-control form-control-lg" placeholder="Email">
-                    </fieldset>
-                    <fieldset class="form-group">
-                        <input formControlName="password" type="password" class="form-control form-control-lg" placeholder="Password">
-                    </fieldset>
-                    <button [disabled]="isSubmitting$ | async" type="submit" class="btn btn-lg btn-primary pull-xs-right">Sign Up</button>
-                </form>
+<ng-container *ngIf="data$ | async as data">
+    <div class="auth-page">
+        <div class="container page">
+            <div class="row">
+                <div class="col-md-6 offset-md-3 col-xs-12">
+                    <h1 class="text-xs-center">Sign Up</h1>
+                    <p class="text-cs-center">
+                        <a routerLink="/login">Have an account?</a>
+                    </p>
+                    <mc-backend-error-messages *ngIf="data.backendErrors"
+                    [backendErrors]="data.backendErrors">
+
+                    </mc-backend-error-messages>
+                    <form [formGroup]="form" (ngSubmit)="onSubmit()" class="form-group">
+                        <fieldset class="form-group">
+                            <input formControlName="username" type="text" class="form-control form-control-lg"
+                                placeholder="Username">
+                        </fieldset>
+                        <fieldset class="form-group">
+                            <input formControlName="email" type="text" class="form-control form-control-lg"
+                                placeholder="Email">
+                        </fieldset>
+                        <fieldset class="form-group">
+                            <input formControlName="password" type="password" class="form-control form-control-lg"
+                                placeholder="Password">
+                        </fieldset>
+                        <button [disabled]="data.isSubmitting" type="submit"
+                            class="btn btn-lg btn-primary pull-xs-right">Sign Up</button>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
-</div>
+</ng-container>
